d3 timeline dash lite loading by default

--- a/examples/initiate spirals experiment.Rmd
+++ b/examples/initiate spirals experiment.Rmd
@@ -96,7 +96,7 @@ scrapeQualtrics("spirals_bad_pilot", "participants", match_by = "follow3", assig
 # Use Dashboards
 
 ```{r}
-
+runDash("2_timelines_d3")
 
 ```
 
