--- a/dev/diagnosing network dash.Rmd
+++ b/dev/diagnosing network dash.Rmd
@@ -21,8 +21,8 @@ include_protected <- FALSE
 ```{r}
 tricordings_directory <- "~/tricordings/studies/"
 
-study_name <- "spirals_bad_pilot"
-#study_name <- "spirals_experiment"
+#study_name <- "spirals_bad_pilot"
+study_name <- "spirals_experiment"
 participant_panel <- "participants"
 assignment_panel <- "assignments"
 
@@ -37,88 +37,11 @@ test <- prep_network_data_d3_spirals(study_name, participant_panel, assignment_p
 
 
 ```{r}
-if(verbose){message("Loading id_links ...")}
-  id_links <- dir(paste0("~/tricordings/studies/", study_name, "/", panel_name, "/id_links_confirmed/"), full.names = T) %>% map_dfr(., readRDS)# %>% filter(ResponseId != "R_3fO7aQmR13LJ4zs") #target - remember to remove this filter and simply prevent duplicates in future
-  id_links <- id_links[!duplicated(id_links$ResponseId, fromLast = T),]
-  if(verbose){message("nrow id_links: ", nrow(id_links))}
 
-  message("Loading all participants' friends...")
-  p_friends_all <- dir(paste0("~/tricordings/studies/", study_name, "/", panel_name, "/twitter_scrapes/friends/"), full.names = T) %>% map_dfr(., readRDS)
-
-  #
-  if (nrow(p_friends_all)==0) {p_friends_all <- dir(paste0("~/tricordings/studies/", "/", study_name, "/", panel_name, "/twitter_scrapes/first_friends/"), full.names = T)[1] %>% map_dfr(., readRDS)}
-
-
-  relevant_user_ids <- unique(id_links$user_id) %>% .[which(!is.na(.))]# %>% .[which(! . %in% unique(p_friends_all$user))]
-
-  if (include_protected){
-    a_followers_relevant <- dir(paste0("~/tricordings/studies/", study_name, "/", assignment_panel, "/twitter_scrapes/followers/"), full.names = T) %>% map_dfr(., readRelevantAssignmentFollowers, relevant_user_ids = relevant_user_ids)
-    protected_relevant_friends <- a_followers_relevant %>% transmute(userx = user_id, user_idx = user, scraped_at) %>% rename("user" = userx, "user_id" = user_idx)
-    p_friends_all <- rbind(p_friends_all, protected_relevant_friends)
-  }
-
-  par_info <- dir(paste0("~/tricordings/studies/", study_name, "/", panel_name, "/twitter_scrapes/user_info/"), full.names = T) %>% map_dfr(readRDS) %>% arrange(desc(created_at)) %>% distinct(user_id, .keep_all = T) %>% mutate(group = "participant") %>% filter(user_id %in% id_links$user_id)
-  ass_info <- dir(paste0("~/tricordings/studies/", study_name, "/", assignment_panel, "/twitter_scrapes/user_info/"), full.names = T) %>% map_dfr(readRDS) %>% arrange(desc(created_at)) %>% distinct(user_id, .keep_all = T) %>% mutate(group = "assignment")
-  all_info <- rbind(par_info, ass_info)
-
-  survey_responses <- prep_survey_data(paste0("~/tricordings/studies/", study_name, "/"), panel_name)[[1]] %>% distinct(ResponseId, .keep_all = T) %>% filter(twitter_agreement=="Yes")# %>% filter(ResponseId != "R_3fO7aQmR13LJ4zs") #target - remember to remove this filter and simply prevent duplicates in future
-  vertex_metadata <- id_links %>% select(ResponseId, start_date, shown, claimed, user_id) %>% left_join(., survey_responses %>% select(-c(shown, claimed, user_id)), by="ResponseId") %>% full_join(., all_info)
-  #vertex_metadata <- all_info
-
-  na_user_ids_indices <- which(is.na(vertex_metadata$user_id))
-  for(i in 1:length(na_user_ids_indices)){
-    vertex_metadata$user_id[na_user_ids_indices[i]] <- paste0("UNMATCHED_",i)
-    vertex_metadata$screen_name[na_user_ids_indices[i]] <- paste0("UNMATCHED_",i)
-  }
-
-  vertex_metadata$stroke_group <- "none"
-  vertex_metadata$stroke_group[na_user_ids_indices] <- "unmatched"
-  vertex_metadata$stroke_group[which(vertex_metadata$protected)] <- "protected"
-
-  vertex_metadata$stroke_color <- "white"
-  vertex_metadata$stroke_color[na_user_ids_indices] <- "red"
-  vertex_metadata$stroke_color[which(vertex_metadata$protected)] <- "orange"
-
-  vertex_metadata$group[which(vertex_metadata$t==1)] <- "treated"
-  vertex_metadata$group[which(vertex_metadata$t==0)] <- "placeboed"
-
-  p_friends_all <- left_join(p_friends_all, (vertex_metadata %>% select(user_id, start_date)), by = c("user" = "user_id"))
-
-  data <- p_friends_all %>%
-    filter(user_id %in% vertex_metadata$user_id) %>%
-    group_by(user, user_id) %>%
-    summarise(first = min(scraped_at),
-              last = max(scraped_at),
-              start_date = start_date[1]
-              # color = ifelse(difftime(Sys.time(), last, units = "day")>1,
-              #                "orange",
-              #                "green")
-    ) %>%
-    mutate(color = case_when((difftime(Sys.time(), last, units = "day")>1) ~ "orange",
-                             ((difftime(Sys.time(), last, units = "day")<=1) & difftime(first, start_date, units = "day")>=0) ~ "green",
-                             (difftime(first, start_date, units = "day")<0) ~ "blue")) %>% select(-start_date)
-
-
-  #always-inactive claims should be red:
-  data <- map_dfr(which((vertex_metadata$group!="assignment") & (sapply(vertex_metadata$claimed, length)>0)),
-                  ~data.frame("user" = vertex_metadata$user_id[.x],
-                              "user_id" = vertex_metadata$claimed[[.x]],
-                              first = as.POSIXct(NA), last = as.POSIXct(NA), color = "red")) %>%
-    anti_join(., data, by = c("user", "user_id")) %>%
-    rbind(., data)
-
-  #shown and not claimed should be gray
-  data <- map_dfr(which(vertex_metadata$group!="assignment"),
-                  ~data.frame("user" = vertex_metadata$user_id[.x],
-                              "user_id" = vertex_metadata$shown[[.x]],
-                              first = as.POSIXct(NA), last = as.POSIXct(NA), color = "gray")) %>%
-    anti_join(., data, by = c("user", "user_id")) %>%
-    rbind(., data)
-```
-
-
-```{r}
-if (verbose) {
+    if (verbose) {
+        message("Test message ...")
+    }
+    if (verbose) {
         message("Loading id_links ...")
     }
     id_links <- dir(paste0("~/tricordings/studies/", study_name, 
@@ -129,6 +52,7 @@ if (verbose) {
     if (verbose) {
         message("nrow id_links: ", nrow(id_links))
     }
+    message("Loading all participants' friends...")
     p_friends_all <- dir(paste0("~/tricordings/studies/", study_name, 
         "/", panel_name, "/twitter_scrapes/friends/"), full.names = T) %>% 
         map_dfr(., readRDS)
@@ -137,8 +61,10 @@ if (verbose) {
             "/", study_name, "/", panel_name, "/twitter_scrapes/first_friends/"), 
             full.names = T)[1] %>% map_dfr(., readRDS)
     }
+    message("Selecting relevant user_ids ...")
     relevant_user_ids <- unique(id_links$user_id) %>% .[which(!is.na(.))]
     if (include_protected) {
+        message("Including protected accounts ...")
         a_followers_relevant <- dir(paste0("~/tricordings/studies/", 
             study_name, "/", assignment_panel, "/twitter_scrapes/followers/"), 
             full.names = T) %>% map_dfr(., readRelevantAssignmentFollowers, 
@@ -158,9 +84,11 @@ if (verbose) {
         full.names = T) %>% map_dfr(readRDS) %>% arrange(desc(created_at)) %>% 
         distinct(user_id, .keep_all = T) %>% mutate(group = "assignment")
     all_info <- rbind(par_info, ass_info)
+    message("Loading survey responses ...")
     survey_responses <- prep_survey_data(paste0("~/tricordings/studies/", 
         study_name, "/"), panel_name)[[1]] %>% distinct(ResponseId, 
-        .keep_all = T) %>% filter(twitter_agreement == "Yes")
+        .keep_all = T) %>% filter(str_detect(twitter_agreement, "Yes"))
+    message("Setting vertex metadata ...")
     vertex_metadata <- id_links %>% select(ResponseId, start_date, 
         shown, claimed, user_id) %>% left_join(., survey_responses %>% 
         select(-c(shown, claimed, user_id)), by = "ResponseId") %>% 
@@ -180,8 +108,10 @@ if (verbose) {
     vertex_metadata$stroke_color[which(vertex_metadata$protected)] <- "orange"
     vertex_metadata$group[which(vertex_metadata$t == 1)] <- "treated"
     vertex_metadata$group[which(vertex_metadata$t == 0)] <- "placeboed"
+    message("Joining participant friends to vertext metadata ...")
     p_friends_all <- left_join(p_friends_all, (vertex_metadata %>% 
         select(user_id, start_date)), by = c(user = "user_id"))
+    message("Generating data object ...")
     data <- p_friends_all %>% filter(user_id %in% vertex_metadata$user_id) %>% 
         group_by(user, user_id) %>% summarise(first = min(scraped_at), 
         last = max(scraped_at), start_date = start_date[1]) %>% 
@@ -200,14 +130,20 @@ if (verbose) {
             first = as.POSIXct(NA), last = as.POSIXct(NA), color = "gray")) %>% 
         anti_join(., data, by = c("user", "user_id")) %>% rbind(., 
         data)
+    message("Finished prepping network data!")
 
-    data
-    vertex_metadata
 ```
 
 
-```{r}
 
+
+```{r}
+#hard-code id_links_confirmed
+
+id_links_bound <- dir("~/tricordings/studies/spirals_experiment/participants/id_links/", full.names = T) %>% map_dfr(., readRDS)
+
+id_links_confirmed <- id_links_bound %>% filter(!is.na(user_id))
+saveRDS(id_links_confirmed, file = paste0("~/tricordings/studies/spirals_experiment/participants/id_links_confirmed/id_links",timeCode(),".rds"))
 
 ```
 
