fixed issue with multiple "start/end_date" variables (ongoing studies will need to manually change the variable names in "id_links" to prepend "qualtrics_" to these variable names)

--- a/dev/diagnosing network dash.Rmd
+++ b/dev/diagnosing network dash.Rmd
@@ -147,9 +147,16 @@ test[[2]]
 id_links_bound <- dir("~/tricordings/studies/spirals_experiment/participants/id_links/", full.names = T) %>% map_dfr(., readRDS)
 
 id_links_confirmed <- id_links_bound %>% filter(!is.na(user_id))
-saveRDS(id_links_confirmed, file = paste0("~/tricordings/studies/spirals_experiment/participants/id_links_confirmed/id_links",timeCode(),".rds"))
+#saveRDS(id_links_confirmed, file = paste0("~/tricordings/studies/spirals_experiment/participants/id_links_confirmed/id_links",timeCode(),".rds"))
 
 ```
+
+
+```{r}
+id_links_test <- dir("~/tricordings/studies/spirals_experiment/participants/id_links/", full.names = T)[1] %>% map_dfr(., readRDS)
+id_links_test
+```
+
 
 
 ```{r}
