--- a/dev/diagnosing network dash.Rmd
+++ b/dev/diagnosing network dash.Rmd
@@ -42,6 +42,8 @@ test[[2]]
 
 ```{r}
 
+anonymize_participants = T
+
     if (verbose) {
         message("Test message ...")
     }
@@ -134,6 +136,20 @@ test[[2]]
             first = as.POSIXct(NA), last = as.POSIXct(NA), color = "gray")) %>% 
         anti_join(., data, by = c("user", "user_id")) %>% rbind(., 
         data)
+      if (anonymize_participants){
+        vertex_metadata_identifiable <- vertex_metadata
+        vertex_metadata <- vertex_metadata %>% filter(!is.na(ResponseId)) %>% mutate(user_id = paste0("ANON_", 1:nrow(.)), screen_name = paste0("ANON_", 1:nrow(.)))
+        #anonymity_index <- data.frame(raw = vertex_metadata_identifiable$user_id, anonymized = vertex_metadata$user_id)
+        anonymity_index <- left_join(vertex_metadata_identifiable %>% filter(!is.na(ResponseId)) %>% select(ResponseId, user_id), vertex_metadata %>% select(ResponseId, user_id), by = c("ResponseId" = "ResponseId")) %>% select(-ResponseId) %>% rename(raw = user_id.x, anon = user_id.y)
+        for(i in 1:nrow(data)){
+          if (data$user[i] %in% anonymity_index$raw){
+            data$user[i] <- anonymity_index$anon[which(anonymity_index$raw==data$user[i])]
+          }
+          if (data$user_id[i] %in% anonymity_index$raw){
+            data$user_id[i] <- anonymity_index$anon[which(anonymity_index$raw==data$user_id[i])]
+          }
+        }
+        }
     message("Finished prepping network data!")
 ```
 
@@ -144,9 +160,8 @@ data
 
 
 ```{r}
-vertex_metadata
-
-vertex_metadata %>% filter(!is.na(ResponseId)) %>% mutate(user_id = paste0("ANON_", 1:nrow(.)), screen_name = paste0("ANON_", 1:nrow(.)))
+vertex_metadata_identifiable <- vertex_metadata
+vertex_metadata <- vertex_metadata %>% filter(!is.na(ResponseId)) %>% mutate(user_id = paste0("ANON_", 1:nrow(.)), screen_name = paste0("ANON_", 1:nrow(.)))
 ```
 
 
