--- a/dev/diagnosing network dash.Rmd
+++ b/dev/diagnosing network dash.Rmd
@@ -31,126 +31,181 @@ panel_name <- participant_panel
 
 
 ```{r}
-test <- prep_network_data_d3_spirals(study_name, participant_panel, assignment_panel, include_protected = F)
-
-
-test
-
-test[[2]]
+ident <- prep_network_data_d3_spirals(study_name, participant_panel, assignment_panel, include_protected = F, anonymize_participants = F)
+anon <- prep_network_data_d3_spirals(study_name, participant_panel, assignment_panel, include_protected = F, anonymize_participants = T)
 ```
+
+
+```{r}
+myNodes <- anon$v %>% add_column(NodeID = 1:nrow(.)-1, .before = 0)
+
+myLinks <- anon$e %>% mutate("source" = nodeIndexer(user, myNodes),
+                                                      "target" = nodeIndexer(user_id, myNodes),
+                                                      "value" = 2)
+
+nodeIndexer(anon$e$user_id, myNodes)
+#nodeIndexer(anon$e$user, myNodes)
+
+nodeIndexer
+
+singleNodeIndexer
+```
+
+
+```{r}
+myNodes <- ident$v %>% add_column(NodeID = 1:nrow(.)-1, .before = 0)
+
+myLinks <- ident$e %>% mutate("source" = nodeIndexer(user, myNodes),
+                                                      "target" = nodeIndexer(user_id, myNodes),
+                                                      "value" = 2)
+
+```
+
+
+```{r}
+myNodes <- vertex_metadata %>% add_column(NodeID = 1:nrow(.)-1, .before = 0)
+
+myLinks <- data %>% mutate("source" = nodeIndexer(user, myNodes),
+                                                      "target" = nodeIndexer(user_id, myNodes),
+                                                      "value" = 2)
+
+```
+
+
+```{r}
+assignment_node_col <- "gray40"
+participant_node_col <- "plum"
+
+fn <- networkD3::forceNetwork(Links = myLinks, Nodes = myNodes, Value = "value", Source = "source", Target = "target", NodeID = "screen_name", Group = "group", opacity = 1, arrows = T, fontSize = 20, fontFamily = "helvetica", legend=T,
+                                  linkColour = myLinks$color, charge = -10, zoom = F, linkDistance = 80,
+                                  #clickAction = MyClickScript,  #commented out to fix "argument of length 0)"
+                                  bounded = T,
+                                  colourScale = paste0("d3.scaleOrdinal().domain(['assignment','participant']).range([",
+                                                       paste0("\'",paste(gplots::col2hex(c(assignment_node_col,
+                                                                                           participant_node_col)),
+                                                                         collapse = "\', \'"),"\'")
+                                                       ,"]);"))
+
+```
+
+
 
 
 ```{r}
 
 anonymize_participants = T
 
-    if (verbose) {
-        message("Test message ...")
+if (verbose) {
+    message("Test message ...")
+}
+if (verbose) {
+    message("Loading id_links ...")
+}
+id_links <- dir(paste0("~/tricordings/studies/", study_name, 
+    "/", panel_name, "/id_links_confirmed/"), full.names = T) %>% 
+    map_dfr(., readRDS)
+id_links <- id_links[!duplicated(id_links$ResponseId, fromLast = T), 
+    ]
+if (verbose) {
+    message("nrow id_links: ", nrow(id_links))
+}
+message("Loading all participants' friends...")
+p_friends_all <- dir(paste0("~/tricordings/studies/", study_name, 
+    "/", panel_name, "/twitter_scrapes/friends/"), full.names = T) %>% 
+    map_dfr(., readRDS)
+if (nrow(p_friends_all) == 0) {
+    p_friends_all <- dir(paste0("~/tricordings/studies/", 
+        "/", study_name, "/", panel_name, "/twitter_scrapes/first_friends/"), 
+        full.names = T)[1] %>% map_dfr(., readRDS)
+}
+message("Selecting relevant user_ids ...")
+relevant_user_ids <- unique(id_links$user_id) %>% .[which(!is.na(.))]
+if (include_protected) {
+    message("Including protected accounts ...")
+    a_followers_relevant <- dir(paste0("~/tricordings/studies/", 
+        study_name, "/", assignment_panel, "/twitter_scrapes/followers/"), 
+        full.names = T) %>% map_dfr(., readRelevantAssignmentFollowers, 
+        relevant_user_ids = relevant_user_ids)
+    protected_relevant_friends <- a_followers_relevant %>% 
+        transmute(userx = user_id, user_idx = user, scraped_at) %>% 
+        rename(user = userx, user_id = user_idx)
+    p_friends_all <- rbind(p_friends_all, protected_relevant_friends)
+}
+par_info <- dir(paste0("~/tricordings/studies/", study_name, 
+    "/", panel_name, "/twitter_scrapes/user_info/"), full.names = T) %>% 
+    map_dfr(readRDS) %>% arrange(desc(created_at)) %>% distinct(user_id, 
+    .keep_all = T) %>% mutate(group = "participant") %>% 
+    filter(user_id %in% id_links$user_id)
+ass_info <- dir(paste0("~/tricordings/studies/", study_name, 
+    "/", assignment_panel, "/twitter_scrapes/user_info/"), 
+    full.names = T) %>% map_dfr(readRDS) %>% arrange(desc(created_at)) %>% 
+    distinct(user_id, .keep_all = T) %>% mutate(group = "assignment")
+all_info <- rbind(par_info, ass_info)
+message("Loading survey responses ...")
+survey_responses <- prep_survey_data(paste0("~/tricordings/studies/", 
+    study_name, "/"), panel_name)[[1]] %>% distinct(ResponseId, 
+    .keep_all = T) %>% filter(str_detect(twitter_agreement, "Yes"))#change 1
+message("Setting vertex metadata ...")
+vertex_metadata <- id_links %>% select(ResponseId, start_date, 
+    shown, claimed, user_id) %>% left_join(., survey_responses %>% 
+    select(-c(start_date, end_date, shown, claimed, user_id)), by = "ResponseId") %>%  #change 2
+    full_join(., all_info)
+na_user_ids_indices <- which(is.na(vertex_metadata$user_id))
+for (i in 1:length(na_user_ids_indices)) {
+    vertex_metadata$user_id[na_user_ids_indices[i]] <- paste0("UNMATCHED_", 
+        i)
+    vertex_metadata$screen_name[na_user_ids_indices[i]] <- paste0("UNMATCHED_", 
+        i)
+}
+vertex_metadata$stroke_group <- "none"
+vertex_metadata$stroke_group[na_user_ids_indices] <- "unmatched"
+vertex_metadata$stroke_group[which(vertex_metadata$protected)] <- "protected"
+vertex_metadata$stroke_color <- "white"
+vertex_metadata$stroke_color[na_user_ids_indices] <- "red"
+vertex_metadata$stroke_color[which(vertex_metadata$protected)] <- "orange"
+#vertex_metadata$group[which(vertex_metadata$t == 1)] <- "treated"
+#vertex_metadata$group[which(vertex_metadata$t == 0)] <- "placeboed"
+message("Joining participant friends to vertext metadata ...")
+p_friends_all <- left_join(p_friends_all, (vertex_metadata %>% 
+    select(user_id, start_date)), by = c(user = "user_id"))
+message("Generating data object ...")
+data <- p_friends_all %>% filter(user_id %in% vertex_metadata$user_id) %>% 
+    group_by(user, user_id) %>% summarise(first = min(scraped_at), 
+    last = max(scraped_at), start_date = start_date[1]) %>% 
+    mutate(color = case_when((difftime(Sys.time(), last, 
+        units = "day") > 1) ~ "orange", ((difftime(Sys.time(), 
+        last, units = "day") <= 1) & difftime(first, start_date, 
+        units = "day") >= 0) ~ "green", (difftime(first, 
+        start_date, units = "day") < 0) ~ "blue")) %>% select(-start_date)
+data <- map_dfr(which((vertex_metadata$group != "assignment") & 
+    (sapply(vertex_metadata$claimed, length) > 0)), ~data.frame(user = vertex_metadata$user_id[.x], 
+    user_id = vertex_metadata$claimed[[.x]], first = as.POSIXct(NA), 
+    last = as.POSIXct(NA), color = "red")) %>% anti_join(., 
+    data, by = c("user", "user_id")) %>% rbind(., data)
+data <- map_dfr(which(vertex_metadata$group != "assignment"), 
+    ~data.frame(user = vertex_metadata$user_id[.x], user_id = vertex_metadata$shown[[.x]], 
+        first = as.POSIXct(NA), last = as.POSIXct(NA), color = "gray")) %>% 
+    anti_join(., data, by = c("user", "user_id")) %>% rbind(., 
+    data)
+  if (anonymize_participants){
+    vertex_metadata_identifiable <- vertex_metadata
+    indices_to_replace <- which(!is.na(vertex_metadata$ResponseId))
+    vertex_metadata$user_id[indices_to_replace] <- paste0("ANON_", 1:length(indices_to_replace))
+    vertex_metadata$screen_name[indices_to_replace] <- paste0("ANON_", 1:length(indices_to_replace))
+    #vertex_metadata <- vertex_metadata %>% filter(!is.na(ResponseId)) %>% mutate(user_id = paste0("ANON_", 1:nrow(.)), screen_name = paste0("ANON_", 1:nrow(.)))
+    #anonymity_index <- data.frame(raw = vertex_metadata_identifiable$user_id, anonymized = vertex_metadata$user_id)
+    anonymity_index <- left_join(vertex_metadata_identifiable %>% filter(!is.na(ResponseId)) %>% select(ResponseId, user_id), vertex_metadata %>% select(ResponseId, user_id), by = c("ResponseId" = "ResponseId")) %>% select(-ResponseId) %>% rename(raw = user_id.x, anon = user_id.y)
+    for(i in 1:nrow(data)){
+      if (data$user[i] %in% anonymity_index$raw){
+        data$user[i] <- anonymity_index$anon[which(anonymity_index$raw==data$user[i])]
+      }
+      if (data$user_id[i] %in% anonymity_index$raw){
+        data$user_id[i] <- anonymity_index$anon[which(anonymity_index$raw==data$user_id[i])]
+      }
     }
-    if (verbose) {
-        message("Loading id_links ...")
     }
-    id_links <- dir(paste0("~/tricordings/studies/", study_name, 
-        "/", panel_name, "/id_links_confirmed/"), full.names = T) %>% 
-        map_dfr(., readRDS)
-    id_links <- id_links[!duplicated(id_links$ResponseId, fromLast = T), 
-        ]
-    if (verbose) {
-        message("nrow id_links: ", nrow(id_links))
-    }
-    message("Loading all participants' friends...")
-    p_friends_all <- dir(paste0("~/tricordings/studies/", study_name, 
-        "/", panel_name, "/twitter_scrapes/friends/"), full.names = T) %>% 
-        map_dfr(., readRDS)
-    if (nrow(p_friends_all) == 0) {
-        p_friends_all <- dir(paste0("~/tricordings/studies/", 
-            "/", study_name, "/", panel_name, "/twitter_scrapes/first_friends/"), 
-            full.names = T)[1] %>% map_dfr(., readRDS)
-    }
-    message("Selecting relevant user_ids ...")
-    relevant_user_ids <- unique(id_links$user_id) %>% .[which(!is.na(.))]
-    if (include_protected) {
-        message("Including protected accounts ...")
-        a_followers_relevant <- dir(paste0("~/tricordings/studies/", 
-            study_name, "/", assignment_panel, "/twitter_scrapes/followers/"), 
-            full.names = T) %>% map_dfr(., readRelevantAssignmentFollowers, 
-            relevant_user_ids = relevant_user_ids)
-        protected_relevant_friends <- a_followers_relevant %>% 
-            transmute(userx = user_id, user_idx = user, scraped_at) %>% 
-            rename(user = userx, user_id = user_idx)
-        p_friends_all <- rbind(p_friends_all, protected_relevant_friends)
-    }
-    par_info <- dir(paste0("~/tricordings/studies/", study_name, 
-        "/", panel_name, "/twitter_scrapes/user_info/"), full.names = T) %>% 
-        map_dfr(readRDS) %>% arrange(desc(created_at)) %>% distinct(user_id, 
-        .keep_all = T) %>% mutate(group = "participant") %>% 
-        filter(user_id %in% id_links$user_id)
-    ass_info <- dir(paste0("~/tricordings/studies/", study_name, 
-        "/", assignment_panel, "/twitter_scrapes/user_info/"), 
-        full.names = T) %>% map_dfr(readRDS) %>% arrange(desc(created_at)) %>% 
-        distinct(user_id, .keep_all = T) %>% mutate(group = "assignment")
-    all_info <- rbind(par_info, ass_info)
-    message("Loading survey responses ...")
-    survey_responses <- prep_survey_data(paste0("~/tricordings/studies/", 
-        study_name, "/"), panel_name)[[1]] %>% distinct(ResponseId, 
-        .keep_all = T) %>% filter(str_detect(twitter_agreement, "Yes"))#change 1
-    message("Setting vertex metadata ...")
-    vertex_metadata <- id_links %>% select(ResponseId, start_date, 
-        shown, claimed, user_id) %>% left_join(., survey_responses %>% 
-        select(-c(start_date, end_date, shown, claimed, user_id)), by = "ResponseId") %>%  #change 2
-        full_join(., all_info)
-    na_user_ids_indices <- which(is.na(vertex_metadata$user_id))
-    for (i in 1:length(na_user_ids_indices)) {
-        vertex_metadata$user_id[na_user_ids_indices[i]] <- paste0("UNMATCHED_", 
-            i)
-        vertex_metadata$screen_name[na_user_ids_indices[i]] <- paste0("UNMATCHED_", 
-            i)
-    }
-    vertex_metadata$stroke_group <- "none"
-    vertex_metadata$stroke_group[na_user_ids_indices] <- "unmatched"
-    vertex_metadata$stroke_group[which(vertex_metadata$protected)] <- "protected"
-    vertex_metadata$stroke_color <- "white"
-    vertex_metadata$stroke_color[na_user_ids_indices] <- "red"
-    vertex_metadata$stroke_color[which(vertex_metadata$protected)] <- "orange"
-    #vertex_metadata$group[which(vertex_metadata$t == 1)] <- "treated"
-    #vertex_metadata$group[which(vertex_metadata$t == 0)] <- "placeboed"
-    message("Joining participant friends to vertext metadata ...")
-    p_friends_all <- left_join(p_friends_all, (vertex_metadata %>% 
-        select(user_id, start_date)), by = c(user = "user_id"))
-    message("Generating data object ...")
-    data <- p_friends_all %>% filter(user_id %in% vertex_metadata$user_id) %>% 
-        group_by(user, user_id) %>% summarise(first = min(scraped_at), 
-        last = max(scraped_at), start_date = start_date[1]) %>% 
-        mutate(color = case_when((difftime(Sys.time(), last, 
-            units = "day") > 1) ~ "orange", ((difftime(Sys.time(), 
-            last, units = "day") <= 1) & difftime(first, start_date, 
-            units = "day") >= 0) ~ "green", (difftime(first, 
-            start_date, units = "day") < 0) ~ "blue")) %>% select(-start_date)
-    data <- map_dfr(which((vertex_metadata$group != "assignment") & 
-        (sapply(vertex_metadata$claimed, length) > 0)), ~data.frame(user = vertex_metadata$user_id[.x], 
-        user_id = vertex_metadata$claimed[[.x]], first = as.POSIXct(NA), 
-        last = as.POSIXct(NA), color = "red")) %>% anti_join(., 
-        data, by = c("user", "user_id")) %>% rbind(., data)
-    data <- map_dfr(which(vertex_metadata$group != "assignment"), 
-        ~data.frame(user = vertex_metadata$user_id[.x], user_id = vertex_metadata$shown[[.x]], 
-            first = as.POSIXct(NA), last = as.POSIXct(NA), color = "gray")) %>% 
-        anti_join(., data, by = c("user", "user_id")) %>% rbind(., 
-        data)
-      if (anonymize_participants){
-        vertex_metadata_identifiable <- vertex_metadata
-        vertex_metadata <- vertex_metadata %>% filter(!is.na(ResponseId)) %>% mutate(user_id = paste0("ANON_", 1:nrow(.)), screen_name = paste0("ANON_", 1:nrow(.)))
-        #anonymity_index <- data.frame(raw = vertex_metadata_identifiable$user_id, anonymized = vertex_metadata$user_id)
-        anonymity_index <- left_join(vertex_metadata_identifiable %>% filter(!is.na(ResponseId)) %>% select(ResponseId, user_id), vertex_metadata %>% select(ResponseId, user_id), by = c("ResponseId" = "ResponseId")) %>% select(-ResponseId) %>% rename(raw = user_id.x, anon = user_id.y)
-        for(i in 1:nrow(data)){
-          if (data$user[i] %in% anonymity_index$raw){
-            data$user[i] <- anonymity_index$anon[which(anonymity_index$raw==data$user[i])]
-          }
-          if (data$user_id[i] %in% anonymity_index$raw){
-            data$user_id[i] <- anonymity_index$anon[which(anonymity_index$raw==data$user_id[i])]
-          }
-        }
-        }
-    message("Finished prepping network data!")
+message("Finished prepping network data!")
+
 ```
 
 ```{r}
